welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: Boolean does not take parameters
  if((Math.abs(a-b) >= 10) || (Math.abs(a-c) >= 10) (Math.abs(b-c) >= 10)){
                                                    ^